openmediavault (6.0.28-1) stable; urgency=low

  * Use HTTP/2 by default for HTTPS connections to the Workbench UI.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 12 May 2022 07:45:19 +0200

openmediavault (6.0.27-1) stable; urgency=low

  * Update locale files.
  * Issue #1302: Add SMART support for QNAP TR-004 (non-RAID mode).
  * Fix bug when user tries to change the password via the UI.
  * Fix bug in 'Diagnostics | System Logs | Remote' page.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 08 May 2022 08:57:06 +0200

openmediavault (6.0.26-1) stable; urgency=low

  * Update locale files.
  * Add missing UI to configure remote logging of syslog. The
    page can be found at 'Diagnostics | System Logs | Remote'.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 04 May 2022 18:58:31 +0200

openmediavault (6.0.25-3) unstable; urgency=low

  * Various improvements.
  * Force avahi-daemon to only use ethernet, bond and wifi network
    interfaces that are configured via the UI. It is still possible to
    overwritten this behaviour by the OMV_AVAHIDAEMON_ALLOW_INTERFACES
    environment variable.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 28 Apr 2022 00:26:50 +0200

openmediavault (6.0.24-1) unstable; urgency=low

  * Enhance installer. Ensure that /media is unmounted to allow
    installation to USB devices.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 24 Apr 2022 17:15:58 +0200

openmediavault (6.0.23-2) unstable; urgency=low

  * Update locale files.
  * Various API enhancements.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 20 Apr 2022 22:17:57 +0200

openmediavault (6.0.22-1) unstable; urgency=low

  * Issue #1212: Use predictable device file of root file system.
  * Issue #1272: Fix bug when building rsyncd configuration and
    'Authenticate users' is enabled but no users are configured.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 06 Apr 2022 19:56:59 +0200
