@@ -12,13 +12,13 @@ data:
         method: set
     fields:
       - type: hint
-        text: _("Use the <em>admin:admin</em> credentials when logging in for the first time. Please do not forget to change the password immediately.")
-        dismissible: true
-        stateId: 76f127fb-092d-43af-8479-c035da5e0ba3
-      - type: hint
         text: _("Please note that the first deployment of the application can take a long time because the container images have to be downloaded first.")
         dismissible: true
         stateId: 54b4d4ce-1fe0-44d9-9c6e-33a40a7e31c2
+      - type: hint
+        text: _("Use the <em>admin:admin</em> credentials when logging in for the first time. Please do not forget to change the password immediately.")
+        dismissible: true
+        stateId: 76f127fb-092d-43af-8479-c035da5e0ba3
       - type: checkbox
         name: enable
         label: _("Enabled")
